Updated main controller for our own implementation of LoginListener, LoginEvent, and set up a basic verification for connection to the database. Shows a pop up if the attempted user login was invalid.

--- a/Information Asset Registry/src/everything/db.properties
+++ b/Information Asset Registry/src/everything/db.properties
@@ -2,7 +2,7 @@
 # git will ignore the file
 # change the values accordingly
 dbUrl = jdbc:mysql://localhost:3306/
-dbName = information asset registry
+dbName = mydb
 dbDriver = com.mysql.jdbc.Driver
 username = root
-password = 1234
+password = 
