--- a/Information Asset Registry/src/everything/db.properties
+++ b/Information Asset Registry/src/everything/db.properties
@@ -2,7 +2,7 @@
 # right click on package explorer, Team > Ignore
 
 dbUrl = jdbc:mysql://localhost:3306/
-dbName = mydb
+dbName = Information Asset Registry
 dbDriver = com.mysql.jdbc.Driver
 username = root
 password = 
