--- a/.classpath
+++ b/.classpath
@@ -4,6 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.23-bin.jar"/>
-	<classpathentry kind="lib" path="D:/Dropbox/Programming/GitHub/information-asset-registry/lib/schemacrawler-10.3.jar"/>
+	<classpathentry kind="lib" path="lib/schemacrawler-10.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
