--- a/.classpath
+++ b/.classpath
@@ -2,9 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="Information Asset Registry/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
+	<classpathentry kind="lib" path="lib/miglayout15-swing.jar" sourcepath="lib/miglayout-src.zip"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.23-bin.jar"/>
 	<classpathentry kind="lib" path="lib/schemacrawler-10.3.jar"/>
-	<classpathentry kind="lib" path="JDatePicker-1.3.2-dist.zip"/>
+	<classpathentry kind="lib" path="lib/JDatePicker-1.3.2-dist.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
